--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,8 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-7.0.classpath}
 excludes=
+file.reference.activation.jar=activation.jar
+file.reference.mail.jar=mail.jar
 file.reference.mysql-connector-java-5.1.37-bin.jar=C:\\Users\\haoya\\Desktop\\UTM\\Sem 5\\Internet Programming\\JDBC\\JDBC - Files to download-20211212\\mysql-connector-java-5.1.37-bin.jar
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +45,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-java-5.1.37-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.37-bin.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
