--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\Zhi Xuen\\AppData\\Roaming\\NetBeans\\12.0\\config\\GlassFishEE6\\Properties\\gfv3-171429780.properties
-file.reference.mysql-connector-java-5.1.37-bin.jar=C:\\E-learning\\SEM 5\\Internet Programming\\JDBC - Files to download-20211219\\mysql-connector-java-5.1.37-bin.jar
+deploy.ant.properties.file=C:\\Users\\haoya\\AppData\\Roaming\\NetBeans\\12.5\\config\\GlassFishEE6\\Properties\\gfv3857463808.properties
+file.reference.mysql-connector-java-5.1.37-bin.jar=C:\\Users\\haoya\\Desktop\\UTM\\Sem 5\\Internet Programming\\JDBC\\JDBC - Files to download-20211212\\mysql-connector-java-5.1.37-bin.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/Zhi Xuen/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/Zhi Xuen/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\Zhi Xuen\\GlassFish_Server\\glassfish;C:\\Users\\Zhi Xuen\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/Zhi Xuen/GlassFish_Server
+j2ee.server.domain=D:/New Folder/glassfish/domains/domain1
+j2ee.server.home=D:/New Folder/glassfish
+j2ee.server.instance=[D:\\New Folder\\glassfish;D:\\New Folder\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=D:/New Folder
 selected.browser=Chrome
-user.properties.file=C:\\Users\\Zhi Xuen\\AppData\\Roaming\\NetBeans\\12.0\\build.properties
+user.properties.file=C:\\Users\\haoya\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
