--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,9 +1,9 @@
-deploy.ant.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\12.5\\config\\GlassFishEE6\\Properties\\gfv3-1000262996.properties
-file.reference.mysql-connector-java-5.1.37-bin.jar=D:\\UTM\\Year 3 Sem1\\Internet Programming\\JDBC setup\\mysql-connector-java-5.1.37-bin.jar
+deploy.ant.properties.file=C:\\Users\\haoya\\AppData\\Roaming\\NetBeans\\12.5\\config\\GlassFishEE6\\Properties\\gfv3857463808.properties
+file.reference.mysql-connector-java-5.1.37-bin.jar=C:\\Users\\haoya\\Desktop\\UTM\\Sem 5\\Internet Programming\\JDBC\\JDBC - Files to download-20211212\\mysql-connector-java-5.1.37-bin.jar
 j2ee.platform.is.jsr109=true
-j2ee.server.domain=C:/Users/User/GlassFish_Server/glassfish/domains/domain1
-j2ee.server.home=C:/Users/User/GlassFish_Server/glassfish
-j2ee.server.instance=[C:\\Users\\User\\GlassFish_Server\\glassfish;C:\\Users\\User\\GlassFish_Server\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
-j2ee.server.middleware=C:/Users/User/GlassFish_Server
+j2ee.server.domain=D:/New Folder/glassfish/domains/domain1
+j2ee.server.home=D:/New Folder/glassfish
+j2ee.server.instance=[D:\\New Folder\\glassfish;D:\\New Folder\\glassfish\\domains\\domain1]deployer:gfv3ee6wc:localhost:4848
+j2ee.server.middleware=D:/New Folder
 selected.browser=SL[/Browsers/MicrosoftEdgeBrowser
-user.properties.file=C:\\Users\\User\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
+user.properties.file=C:\\Users\\haoya\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
